--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 .images{
     display: flex;
     justify-content: center;
-    margin-top: 150px;
+    margin-top: 100px;
 
 }
 .img{
@@ -19,13 +19,13 @@ body{
     margin: 0 20px 0px 20px;
 }
 .image {
-    width: auto;
-    height: 1000px;
+    width: 95%;
+    height: 95%;
     position: absolute;
   }
   p{
-    width: 10000px;
-    height: 10000px;
+    width: 100%;
+    height: 100%;
     color: aqua;
     display: none;
     position: absolute;
